@@ -1,3 +1,7 @@
+2008-10-17  Curtis Gedak  <gedakc@gmail.com>
+
+	* src/Dialog_Progress.cc: Converted more words for translation
+
 2008-10-16  Curtis Gedak  <gedakc@gmail.com>
 
 	* src/Dialog_Progress.cc: Added call to get_lang() for lang tags
